test/src/e2e_vm_tests/test_programs/should_fail/type_mismatch_error_message/src/main.sw
script;

pub enum MyResult<T, E> {
    Ok: T,
    Err: E,
}

struct Data<T> {
    value: T,
    other: u64,
}

fn example() {
    let foo = MyResult::Ok::<Data<bool>, str[4]>(Data {
        value: true,
        other: 1,
    });
    foo.does_not_exist();
}

struct Item<I> {
    item: I,
}

fn test<A, Z>(arg: A) -> Item<Z> {
    Item { item: arg }
}

fn main() {
    let i: Item<u64> = test(true);
}
